fixed(?) mobile Contact

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <article class="overlay" id="overlay">
         <ul>
           <li>Weekly Recommendations</li>
-          <li onclick="toContact()">Contact</li>
+          <li onclick="toContactMobile()">Contact</li>
           <li>T D B</li>
           <li onclick="closeMenu()"><i class="fas fa-times"></i></li>
         </ul>
