--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Design Shop</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <script src="https://kit.fontawesome.com/ebd9d2a3be.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/ebd9d2a3be.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header>
@@ -362,14 +365,19 @@
         <h2>Any questions regarding our products?</h2>
         <p>Fill out this form and we will get back to you in the next day.</p>
         <div>
-          <input type="text" name="name" id="fullName" placeholder="Your Name" />
+          <input
+            type="text"
+            name="name"
+            id="fullName"
+            placeholder="Your Name"
+          />
           <input
             type="email"
             name="email"
             id="email"
             placeholder="Your Email"
           />
-          <textarea name="" id="message" cols="30" rows="10"></textarea>
+          <textarea name="message" id="message" cols="30" rows="10"></textarea>
         </div>
         <button onclick="sendMessage()">Send</button>
       </section>
@@ -384,35 +392,42 @@
       <!-- ITS JUST A JOKE BRO -->
       <div class="tableColumn">
         <table>
-            <tr>
-              <th>The Design Shop</th>
-              <th class="tWidth1">Contact</th>
-              <th class="tWidth">Newsletter</th>
-              <th>Find Us Here</th>
-            </tr>
-            <tr>
-              <td>Carefully curated online design store,</td>
-              <td class="tWidth1"><a href="mailto:super@super.de">Email us</a></td>
-              <td class="tWidth">Click here to <strong><a href="">subscribe</a></strong></td>
-              <td>Facebook</td>
-            </tr>
-            <tr>
-              <td>founded and designed by <strong>Ruby Bacanovic<strong>.</td>
-              <td class="tWidth1">Work with us</td>
-              <td class="tWidth"><i>Don't worry. We hate spam too.</i></td>
-              <td>Instagram</td>
-            </tr>
-            <tr>
-              <td colspan="3" class="tWidth"></td>
-              <td>Twitter</td>
-            </tr>
+          <tr>
+            <th>The Design Shop</th>
+            <th class="tWidth1">Contact</th>
+            <th class="tWidth">Newsletter</th>
+            <th>Find Us Here</th>
+          </tr>
+          <tr>
+            <td>Carefully curated online design store,</td>
+            <td class="tWidth1">
+              <a href="mailto:super@super.de">Email us</a>
+            </td>
+            <td class="tWidth">
+              Click here to <strong><a href="">subscribe</a></strong>
+            </td>
+            <td>Facebook</td>
+          </tr>
+          <tr>
+            <td>founded and designed by <strong>Ruby Bacanovic</strong>.</td>
+            <td class="tWidth1">Work with us</td>
+            <td class="tWidth"><i>Don't worry. We hate spam too.</i></td>
+            <td>Instagram</td>
+          </tr>
+          <tr>
+            <td colspan="3" class="tWidth"></td>
+            <td>Twitter</td>
+          </tr>
         </table>
       </div>
       <!-- PLEASE DON'T TASE ME BRO -->
       <section class="gridSectionTwo">
         <div>
           <h2>The Design Shop</h2>
-          <p>Carefully curated online design store, founded and designed by <strong>Ruby Bacanovic</strong>.</p>
+          <p>
+            Carefully curated online design store, founded and designed by
+            <strong>Ruby Bacanovic</strong>.
+          </p>
         </div>
         <div class="footerPadding">
           <h2>Contact</h2>
