--- a/index.html
+++ b/index.html
@@ -383,13 +383,13 @@
           />
           <textarea name="message" id="message" cols="30" rows="10"></textarea>
         </div>
-        <button onclick="javascript:sendMessage()">Send</button>
+        <button onclick="sendMessage()">Send</button>
       </section>
       <article id="messageSent" class="hide">
         <h2>Thanks, we've received your message!</h2>
         <p>We'll get back to you in the next 24 hours.</p>
         <!-- <p>Confirm to receive our newest news(?!)</p> -->
-        <button onclick="javascript:closeWindow()">Close</button>
+        <button onclick="closeWindow()">Close</button>
       </article>
     </main>
     <footer id="footer">
