fixed sizes and minor changes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h2>THE DESIGN SHOP</h2>
         <ul id="desktopHeader">
           <li>Weekly Recommendations</li>
-          <a href="#contact" onclick="toContactDesktop()">Contact</a>
+          <li><a href="#contact" onclick="toContactDesktop()">Contact</a></li>
           <li>T D B</li>
         </ul>
         <p id="mobileMenu" class="rotate" onclick="toggleMenu()">
