--- a/index.html
+++ b/index.html
@@ -13,30 +13,36 @@
   </head>
   <body>
     <header>
+      <!-- Desktop Header -->
       <nav>
         <h2>THE DESIGN SHOP</h2>
         <ul id="desktopHeader">
           <li>Weekly Recommendations</li>
-          <li><a href="#contact" onclick="toContactDesktop()">Contact</a></li>
+          <li>
+            <a href="#contact" onclick="toContactDesktop()">Contact</a>
+          </li>
           <li>T D B</li>
         </ul>
+        <!-- Mobile Header -->
         <p id="mobileMenu" class="rotate" onclick="toggleMenu()">
           <i class="fas fa-chevron-left fa-2x"></i>
         </p>
       </nav>
-      <div id="mobileMenuList" class="flex show">
+      <div id="mobileMenuList" class="flex-jc-sb show">
         <a href="#">Weekly Recommendations</a>
         <a href="#contact" onclick="toContactMobile()">Contact</a>
         <a href="#">T D B</a>
       </div>
     </header>
+
     <main>
+      <!-- BEGIN OF MAIN GRID -->
       <section class="gridSection">
         <div class="kankenArt">
           <a href="https://amzn.to/32MmHgL"
             ><img src="./assets/img/1.png" alt="KankenArt"
           /></a>
-          <div class="flex">
+          <div class="flex-jc-sb">
             <p>Kanken Art Laptop 15" Special Edition Backpack</p>
             <p>$119.00</p>
           </div>
@@ -47,7 +53,7 @@
           <a href="https://amzn.to/2WX7vtD"
             ><img src="./assets/img/d2.png" alt="Lampe"
           /></a>
-          <div class="flex">
+          <div class="flex-jc-sb">
             <p>Swing Arm Wood Desk Lamp</p>
             <p>$36.00</p>
           </div>
@@ -58,7 +64,7 @@
           <a href="https://amzn.to/2I3WvXM"
             ><img src="./assets/img/u6.png" alt="Hajo"
           /></a>
-          <div class="flex">
+          <div class="flex-jc-sb">
             <p>Hajo Backpack</p>
             <p>$89.00</p>
           </div>
@@ -69,7 +75,7 @@
           <a href="https://amzn.to/2YX3043"
             ><img src="./assets/img/u10.png" alt="Longboard"
           /></a>
-          <div class="flex">
+          <div class="flex-jc-sb">
             <p>Zed Bamboo Longboard</p>
             <p>$60.00</p>
           </div>
@@ -80,7 +86,7 @@
           <a href="https://amzn.to/2KfP3ee"
             ><img src="./assets/img/u9.png" alt=""
           /></a>
-          <div class="flex">
+          <div class="flex-jc-sb">
             <p>Electric Pour-Over Kettle</p>
             <p>$149.00</p>
           </div>
@@ -91,7 +97,7 @@
           <a href="https://amzn.to/2FYB3zT"
             ><img src="./assets/img/h17.png" alt="woodenCar"
           /></a>
-          <div class="flex">
+          <div class="flex-jc-sb">
             <p>Woodie Vintage Car</p>
             <p>$35.00</p>
           </div>
@@ -103,7 +109,7 @@
             href="https://www.bookdepository.com/Logo-Modernism-Jens-Muller-R-Roger-Remington/9783836545303/?a_aid=1991"
             ><img src="./assets/img/c3.png" alt="redBook"
           /></a>
-          <div class="flex">
+          <div class="flex-jc-sb">
             <p>Logo Modernism</p>
             <p>$60.00</p>
           </div>
@@ -114,7 +120,7 @@
           <a href="https://amzn.to/2YQLnCV"
             ><img src="./assets/img/d7.png" alt="Book"
           /></a>
-          <div class="flex">
+          <div class="flex-jc-sb">
             <p>Dieter Rams: As Little Design as Possible</p>
             <p>$150.00</p>
           </div>
@@ -125,7 +131,7 @@
           <a href="https://amzn.to/2I3lbQ7"
             ><img src="./assets/img/c6.png" alt="TheEye"
           /></a>
-          <div class="flex">
+          <div class="flex-jc-sb">
             <p>The Eye</p>
             <p>$28.00</p>
           </div>
@@ -136,7 +142,7 @@
           <a href="https://amzn.to/2IifSvA"
             ><img src="./assets/img/h13.png" alt="organizer"
           /></a>
-          <div class="flex">
+          <div class="flex-jc-sb">
             <p>Gather Desk Organizer</p>
             <p>$149.00</p>
           </div>
@@ -147,7 +153,7 @@
           <a href="https://amzn.to/2G84CiT"
             ><img src="./assets/img/h8.png" alt="canteen"
           /></a>
-          <div class="flex">
+          <div class="flex-jc-sb">
             <p>Dipped Canteen</p>
             <p>$28.00</p>
           </div>
@@ -158,7 +164,7 @@
           <a href="https://amzn.to/2YWPz3N"
             ><img src="./assets/img/h2.png" alt="chair"
           /></a>
-          <div class="flex">
+          <div class="flex-jc-sb">
             <p>Sayl Office Chair White</p>
             <p>$599.00</p>
           </div>
@@ -169,7 +175,7 @@
           <a href="https://amzn.to/2KhwTsz"
             ><img src="./assets/img/d5.png" alt="notebook"
           /></a>
-          <div class="flex">
+          <div class="flex-jc-sb">
             <p>Three Cherry Wood Notebook</p>
             <p>$13.00</p>
           </div>
@@ -181,7 +187,7 @@
             href="https://www.bookdepository.com/From-Japan/9780957081659?a_aid=1991"
             ><img src="./assets/img/c5.png" alt="japan"
           /></a>
-          <div class="flex">
+          <div class="flex-jc-sb">
             <p>From Japan</p>
             <p>$16.00</p>
           </div>
@@ -192,7 +198,7 @@
           <a href="http://www.grupaproducts.com/arigato/"
             ><img src="./assets/img/h6.png" alt="deskLamp"
           /></a>
-          <div class="flex">
+          <div class="flex-jc-sb">
             <p>Arigato Desk Lamp</p>
             <p>$380.00</p>
           </div>
@@ -203,7 +209,7 @@
           <a href="https://amzn.to/2CZiPxO"
             ><img src="./assets/img/u7.png" alt="Watch"
           /></a>
-          <div class="flex">
+          <div class="flex-jc-sb">
             <p>Winston Regal Watch</p>
             <p>$58.00</p>
           </div>
@@ -214,7 +220,7 @@
           <a href="https://heyshop.es/collections/home/products/h-hey"
             ><img src="./assets/img/d4.png" alt="Poster"
           /></a>
-          <div class="flex">
+          <div class="flex-jc-sb">
             <p>Letter H Poster</p>
             <p>$45.00</p>
           </div>
@@ -225,7 +231,7 @@
           <a href="https://amzn.to/2UGLHEQ"
             ><img src="./assets/img/u11.png" alt="coffeeCan"
           /></a>
-          <div class="flex">
+          <div class="flex-jc-sb">
             <p>Coffe Can</p>
             <p>$11.00</p>
           </div>
@@ -236,7 +242,7 @@
           <a href="https://amzn.to/2UFjEWp"
             ><img src="./assets/img/h9.png" alt="beoplay"
           /></a>
-          <div class="flex">
+          <div class="flex-jc-sb">
             <p>Beoplay H4</p>
             <p>$160.00</p>
           </div>
@@ -247,7 +253,7 @@
           <a href="https://amzn.to/2OTHEQg"
             ><img src="./assets/img/p2.png" alt="makeItNow"
           /></a>
-          <div class="flex">
+          <div class="flex-jc-sb">
             <p>Make It Now</p>
             <p>$22.00</p>
           </div>
@@ -258,7 +264,7 @@
           <a href="https://amzn.to/2UFHfGt"
             ><img src="./assets/img/h4.png" alt="sideChair"
           /></a>
-          <div class="flex">
+          <div class="flex-jc-sb">
             <p>Black Side Chair</p>
             <p>$54.00</p>
           </div>
@@ -269,7 +275,7 @@
           <a href="https://amzn.to/2Ij1IKA"
             ><img src="./assets/img/c22.png" alt="graphicDesign"
           /></a>
-          <div class="flex">
+          <div class="flex-jc-sb">
             <p>Min: The New Simplicity in Graphic Design</p>
             <p>$28.00</p>
           </div>
@@ -280,7 +286,7 @@
           <a href="https://amzn.to/2Ij1IKA"
             ><img src="./assets/img/c1.png" alt="gridSystem"
           /></a>
-          <div class="flex">
+          <div class="flex-jc-sb">
             <p>Grid systems in graphic design</p>
             <p>$42.00</p>
           </div>
@@ -291,7 +297,7 @@
           <a href="https://amzn.to/2I5vxiq"
             ><img src="./assets/img/u12.png" alt="wallet"
           /></a>
-          <div class="flex">
+          <div class="flex-jc-sb">
             <p>Card Wallet</p>
             <p>$15.00</p>
           </div>
@@ -303,7 +309,7 @@
             href="https://goodfuckingdesignadvice.com/products/classic-advice-print"
             ><img src="./assets/img/p3.png" alt="advice"
           /></a>
-          <div class="flex">
+          <div class="flex-jc-sb">
             <p>Classic Advice Print Black</p>
             <p>$30.00</p>
           </div>
@@ -314,7 +320,7 @@
           <a href="https://amzn.to/2D3yZWX"
             ><img src="./assets/img/life-15.png" alt="mouse"
           /></a>
-          <div class="flex">
+          <div class="flex-jc-sb">
             <p>Magic Mouse 2</p>
             <p>$92.00</p>
           </div>
@@ -325,7 +331,7 @@
           <a href="https://amzn.to/2WTbsPL"
             ><img src="./assets/img/life-17.png" alt="tumbler"
           /></a>
-          <div class="flex">
+          <div class="flex-jc-sb">
             <p>Travel Tumbler</p>
             <p>$34.00</p>
           </div>
@@ -336,7 +342,7 @@
           <a href="https://amzn.to/2GbCf4A"
             ><img src="./assets/img/life-16.png" alt="keyboard"
           /></a>
-          <div class="flex">
+          <div class="flex-jc-sb">
             <p>Magic Keyboard</p>
             <p>$139.00</p>
           </div>
@@ -347,7 +353,7 @@
           <a href="https://amzn.to/2WMJbdy"
             ><img src="./assets/img/u8.png" alt="bottleGrinder"
           /></a>
-          <div class="flex">
+          <div class="flex-jc-sb">
             <p>Bottle Grinder</p>
             <p>$75.00</p>
           </div>
@@ -358,7 +364,7 @@
           <a href="https://amzn.to/2JLtxvk"
             ><img src="./assets/img/home-8.png" alt="thermos"
           /></a>
-          <div class="flex">
+          <div class="flex-jc-sb">
             <p>Geo Thermos</p>
             <p>$62.00</p>
           </div>
@@ -369,7 +375,7 @@
           <a href="https://amzn.to/2YdSBPy"
             ><img src="./assets/img/home-10.png" alt="ottoman"
           /></a>
-          <div class="flex">
+          <div class="flex-jc-sb">
             <p>Womb Chair & Ottoman</p>
             <p>$799.00</p>
           </div>
@@ -380,7 +386,7 @@
           <a href="https://amzn.to/2LCEfGP"
             ><img src="./assets/img/home-9.png" alt="glassCarafe"
           /></a>
-          <div class="flex">
+          <div class="flex-jc-sb">
             <p>Water Filter Glass Carafe</p>
             <p>$30.00</p>
           </div>
@@ -388,6 +394,8 @@
         </div>
       </section>
 
+      <!-- First Contactform -->
+      <!-- both forms are set to display: none // press on contact to activate -->
       <section id="contact" class="contactShow">
         <h2>Any questions regarding our products?</h2>
         <p>Fill out this form and we will get back to you in the next day.</p>
@@ -415,6 +423,7 @@
         <button onclick="sendMessage()">Send</button>
       </section>
 
+      <!-- Second Contactform -->
       <article id="messageSent" class="contactShow2">
         <h2>Thanks, we've received your message!</h2>
         <p>We'll get back to you in the next 24 hours.</p>
@@ -456,6 +465,7 @@
       </div>
       <!-- PLEASE DON'T TASE ME BRO -->
 
+      <!-- Mobile Footer Grid -->
       <section class="gridSectionTwo">
         <div>
           <h2>The Design Shop</h2>
@@ -485,6 +495,7 @@
         </div>
       </section>
 
+      <!-- FOOTER NAV -->
       <nav>
         <ul>
           <li>© 2019 The Design Shop</li>
